--- a/index.html
+++ b/index.html
@@ -2647,13 +2647,13 @@ soporte y seguridad TI<br>
     right: 10px;
   }
 }
-@media screen and (max-width: 778px) and all and (-ms-high-contrast: none) {
+@media screen and (max-width: 778px) and (-ms-high-contrast: none) {
   .blog-carousel-shortcode.blog-carousel-shortcode-id-be746cfaf24bd828d46a12f931b7565b.reposition-arrows .owl-nav .owl-prev {
     transform: translateY(-50%);
     margin-top: 0px;
   }
 }
-@media screen and (max-width: 778px) and all and (-ms-high-contrast: none) {
+@media screen and (max-width: 778px) and (-ms-high-contrast: none) {
   .blog-carousel-shortcode.blog-carousel-shortcode-id-be746cfaf24bd828d46a12f931b7565b.reposition-arrows .owl-nav .owl-next {
     transform: translateY(-50%);
     margin-top: 0px;
@@ -2944,7 +2944,7 @@ soporte y seguridad TI<br>
 </div></div></div>
 <div class="wpb_animate_when_almost_visible wpb_fadeInUpBig fadeInUpBig wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-0 vc_col-lg-4 vc_col-md-offset-0 vc_col-md-4 vc_col-sm-offset-0"><div class="vc_column-inner vc_custom_1632505282739"><div class="wpb_wrapper">
 <div id="ultimate-heading-80616453cb5893367" class="uvc-heading ult-adjust-bottom-margin ultimate-heading-80616453cb5893367 uvc-3484 " data-hspacer="no_spacer" data-halign="center" style="text-align:center">
-<div class="uvc-heading-spacer no_spacer" style="./top/index.html"></div>
+<div class="uvc-heading-spacer no_spacer" style=></div>
 <div class="uvc-main-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-80616453cb5893367 h2" data-responsive-json-new='{"font-size":"desktop:24px;","line-height":"desktop:34px;"}'><h2 style="font-weight:bold;color:#ffffff;">+51 940 476 870</h2></div>
 <div class="uvc-sub-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-80616453cb5893367 .uvc-sub-heading " data-responsive-json-new='{"font-size":"desktop:20px;","line-height":"desktop:30px;"}' style="font-weight:normal;color:#ffffff;margin-bottom:30px;">
 <p><i class="icomoon-the7-font-the7-mail-01"></i> info@ofimatica.pe</p>
